v2.4.7/CodeIgniter/CodeIgniter_galaxy_llm.md
# ARCHITECTURAL_BRIEF: CodeIgniter
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Target Path** | `/srv/storage_16tb/projects/gitgalaxy/data/corpus_php/CodeIgniter` |
| **Timestamp** | `2026-08-07T03:52:41.460127+00:00` |
| **Scan Duration** | `0.88s` |
| **Git Branch** | `develop` |
| **Git Commit** | `3658d731eaabe6117298a105ffb5b9dd59e190ce` |
| **Git Remote** | `https://github.com/bcit-ci/CodeIgniter.git` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **🚨 ML_CONFIRMED_THREAT_DETECTED**
> XGBoost Structural Signatures model identified 181 malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. High Risk Exposure (e.g., Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT RISK EXPOSURE ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates Risk Exposure (Lower Risk 0 - Higher Risk Exposure 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws.
> 
> 1. **Cognitive Load Exposure:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Error & Exception Risk Exposure:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Tech Debt Exposure:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Verification Risk Exposure:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **API Risk Exposure:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Risk Exposure:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **State Flux Risk Exposure:** Measures the frequency of data mutation and variable reassignment.
> 8. **Commented Logic (dead code):** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Match Risk Exposure:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Stability:** Measures the recency of edits relative to the repository's entire lifespan.
> 11. **Deep Churn:** Measures the historical volatility and frequency of modification.
> 12. **Documentation Risk Exposure:** Measures the lack of structured documentation and ownership metadata.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Secrets Risk Exposure:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 556 |
| Analyzed Artifacts (Scanned) | 236 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 320 |
| Total LOC | 16211 |
| Volatility Index | 0.0 |
| % Scanned of codebase = | 42.4% |
| Dominant Lang | PHP |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.0 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | 0.0 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 0.0% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 1.0 | Hops between files. Lower = Tighter coupling. |
| Articulation Pts | 0 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| PHP | 174 | 15244 | 73.7% |
| HTML | 40 | 638 | 16.9% |
| XML | 9 | 0 | 3.8% |
| PYTHON | 4 | 35 | 1.7% |
| MARKDOWN | 3 | 0 | 1.3% |
| PLAINTEXT | 2 | 0 | 0.8% |
| JAVASCRIPT | 2 | 154 | 0.8% |
| JSON | 1 | 35 | 0.4% |
| MAKEFILE | 1 | 105 | 0.4% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `6.427`
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| file_cluster_8 | 174 | 73.7% |
| file_cluster_9 | 42 | 17.8% |
| file_cluster_13 | 12 | 5.1% |
| file_cluster_0 | 2 | 0.8% |
| file_cluster_7 | 1 | 0.4% |

### Inert Structural Mass (Static Categories)
| Category | Count | Repo % |
|---|---|---|
| Static: Literature & Documentation | 5 | 2.1% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 320*

**Composition by Extension & Reason:**
- `.rst`: 142x Excluded (Unsupported Extension: '.rst'), 30x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.php`: 106x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Machine-Generated Source Code Signature: 476 LOC), 1x Excluded (Saturation: Line 98 exceeds 500 chars)
- `.html`: 10x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir), 1x Excluded (Saturation: Line 15 exceeds 500 chars)
- `no_extension`: 6x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.gif`: 5x Excluded (Explicitly Denied Extension: '.gif')
- `.css`: 2x Excluded (Saturation: Line 1 exceeds 500 chars), 1x Excluded (Saturation: Line 17 exceeds 500 chars)
- `.ttf`: 2x Excluded (Explicitly Denied Extension: '.ttf')
- `.ico`: 2x Excluded (Explicitly Denied Extension: '.ico')
- `.jpg`: 2x Excluded (Explicitly Denied Extension: '.jpg')
- `.yml`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.sh`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.xml`: 1x Excluded (System Exclusion, Hidden Directory, or Dynamic Ignored Dir)
- `.otf`: 1x Excluded (Explicitly Denied Extension: '.otf')
- `.eot`: 1x Excluded (Explicitly Denied Extension: '.eot')
- `.woff`: 1x Excluded (Explicitly Denied Extension: '.woff')

## 6. RISK EXPOSURE ANALYSIS (0-100%)
| Risk Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Cognitive Load Exposure | 3.5 | 63.9 | 21.2 | 15.2 | 5.0 |
| Error & Exception Exposure | 0.0 | 100.0 | 50.4 | 67.3 | 0.0 |
| Tech Debt Exposure | 0.0 | 100.0 | 32.2 | 0.0 | 0.0 |
| Testing Exposure | 0.0 | 80.0 | 17.3 | 2.3 | 80.0 |
| API Exposure | 0.0 | 14.9 | 1.6 | 0.0 | 0.0 |
| Concurrency Exposure | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| State Flux Exposure | 0.0 | 100.0 | 50.6 | 84.9 | 0.0 |
| Commented Logic Exposure | 0.0 | 18.4 | 0.3 | 0.0 | 0.0 |
| Specification Exposure | 6.7 | 100.0 | 83.8 | 100.0 | 100.0 |
| Instability Exposure | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Volatility Exposure | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Documentation Exposure | 0.0 | 89.5 | 17.0 | 11.9 | 11.9 |
| Hardcoded Payload Artifacts | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `user_guide_src/source/_themes/sphinx_rtd_theme/layout_old.html` (Hits: 27)
- `system/core/Output.php` (Hits: 17)
- `system/core/Input.php` (Hits: 15)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
These are the most interconnected files relative to the rest of this repository. On a repo with dense internal coupling, that means core load-bearing infrastructure -- changes carry real cascading-break risk. On a repo with a flatter internal architecture, the gap between #1 and #5 may be small, and this list is a weaker signal accordingly; compare the connection counts below before treating it as a verdict.

1. **DB.php** (`system/database/DB.php`) — 1 inbound connections
2. **DCO.txt** (`DCO.txt`) — 0 inbound connections
3. **license.txt** (`license.txt`) — 0 inbound connections
4. **autoload.php** (`application/config/autoload.php`) — 0 inbound connections
5. **constants.php** (`application/config/constants.php`) — 0 inbound connections

### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **Loader.php** (`system/core/Loader.php`) — 53 outbound dependencies
2. **Common.php** (`system/core/Common.php`) — 49 outbound dependencies
3. **CodeIgniter.php** (`system/core/CodeIgniter.php`) — 31 outbound dependencies
4. **DB_query_builder.php** (`system/database/DB_query_builder.php`) — 28 outbound dependencies
5. **DB_driver.php** (`system/database/DB_driver.php`) — 26 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `driver` (@ `system/core/Loader.php`) -> Impact: **146.4** | LOC: 408
- `csrf_verify` (@ `system/core/Security.php`) -> Impact: **104.4** | LOC: 253
  * *Intent:* /** * CSRF Expire time * * Expiration time for Cross Site Request Forgery protection cookie. * Defaults to two hours (in seconds). *
- `set_header` (@ `system/core/Output.php`) -> Impact: **102.0** | LOC: 307
- `initialize` (@ `system/database/DB_driver.php`) -> Impact: **97.8** | LOC: 327
- `xss_clean` (@ `system/core/Security.php`) -> Impact: **73.6** | LOC: 121
- `compile_binds` (@ `system/database/DB_driver.php`) -> Impact: **66.6** | LOC: 155
- `create_captcha` (@ `system/helpers/captcha_helper.php`) -> Impact: **63.6** | LOC: 163
  * *Intent:* /** * CodeIgniter * * An open source application development framework for PHP * * This content is released under the MIT License (MIT) * * Copyright ...
- `password_hash` (@ `system/core/compat/password.php`) -> Impact: **58.6** | LOC: 93
  * *Intent:* * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER...
- `hash_pbkdf2` (@ `system/core/compat/hash.php`) -> Impact: **56.5** | LOC: 71
- `timespan` (@ `system/helpers/date_helper.php`) -> Impact: **56.4** | LOC: 87
  * *Intent:* * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL T...

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Cog Load | Avg Debt |
|---|---|---|---|---|
| `system/core` | 18 | 7136.46 | 34.87% | 46.15% |
| `system/database/drivers/pdo/subdrivers` | 25 | 3303.5 | 34.48% | 78.4% |
| `system/database` | 8 | 3013.78 | 28.96% | 61.4% |
| `system/helpers` | 20 | 2913.56 | 32.26% | 3.02% |
| `application/config` | 13 | 1309.48 | 12.31% | 0.0% |
| `system/database/drivers/oci8` | 5 | 498.32 | 23.22% | 71.57% |
| `system/database/drivers/mysql` | 5 | 466.42 | 28.18% | 58.11% |
| `system/core/compat` | 5 | 419.72 | 31.97% | 4.07% |
| `system/database/drivers/mssql` | 5 | 413.94 | 24.68% | 78.18% |
| `system/database/drivers/sqlsrv` | 5 | 383.96 | 18.85% | 77.47% |

## 10. TARGETED RISK VECTORS (Top 5 by Exposure)
### Highest Tech Debt (Fragile/Planned)
- `system/database/drivers/mysql/mysql_driver.php` -> **100.0%** Exposure
- `system/database/drivers/mysqli/mysqli_driver.php` -> **100.0%** Exposure
- `system/database/drivers/odbc/odbc_utility.php` -> **100.0%** Exposure
- `system/database/drivers/pdo/pdo_utility.php` -> **100.0%** Exposure
- `system/database/drivers/pdo/subdrivers/pdo_odbc_forge.php` -> **100.0%** Exposure
### Highest State Flux (Mutation/Volatility)
- `application/config/doctypes.php` -> **100.0%** Exposure
- `application/config/memcached.php` -> **100.0%** Exposure
- `application/config/migration.php` -> **100.0%** Exposure
- `application/config/routes.php` -> **100.0%** Exposure
- `system/core/Benchmark.php` -> **100.0%** Exposure
### Highest Design Slop (Dead & Duplicated Logic)
- `system/database/DB_query_builder.php` -> **39** Orphaned Functions | **0** Duplicates
- `system/database/drivers/mysql/mysql_driver.php` -> **15** Orphaned Functions | **0** Duplicates
- `system/database/drivers/mssql/mssql_driver.php` -> **14** Orphaned Functions | **0** Duplicates
- `system/database/drivers/oci8/oci8_driver.php` -> **14** Orphaned Functions | **0** Duplicates
- `system/database/drivers/sqlite3/sqlite3_driver.php` -> **14** Orphaned Functions | **0** Duplicates

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
> **CRITICAL THREATS DETECTED.** The following files possess the structural signatures of known vulnerabilities.

1. **`index.php`** -> AI Confidence: **99.48%**
2. **`system/helpers/captcha_helper.php`** -> AI Confidence: **99.48%**
3. **`system/helpers/directory_helper.php`** -> AI Confidence: **99.48%**
4. **`system/helpers/file_helper.php`** -> AI Confidence: **99.48%**
5. **`system/helpers/path_helper.php`** -> AI Confidence: **99.48%**
6. **`system/language/english/calendar_lang.php`** -> AI Confidence: **99.48%**
7. **`system/language/english/date_lang.php`** -> AI Confidence: **99.48%**
8. **`system/language/english/db_lang.php`** -> AI Confidence: **99.48%**
9. **`system/language/english/form_validation_lang.php`** -> AI Confidence: **99.48%**
10. **`system/language/english/ftp_lang.php`** -> AI Confidence: **99.48%**
11. **`system/language/english/number_lang.php`** -> AI Confidence: **99.48%**
12. **`system/language/english/pagination_lang.php`** -> AI Confidence: **99.48%**
13. **`system/language/english/profiler_lang.php`** -> AI Confidence: **99.48%**
14. **`system/language/english/unit_test_lang.php`** -> AI Confidence: **99.48%**
15. **`system/language/english/upload_lang.php`** -> AI Confidence: **99.48%**
16. **`system/core/Security.php`** -> AI Confidence: **99.39%**
17. **`system/core/compat/standard.php`** -> AI Confidence: **99.39%**
18. **`system/database/drivers/cubrid/cubrid_driver.php`** -> AI Confidence: **99.39%**

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

*No critical vulnerabilities or security lens thresholds breached.*

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `6` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `2052` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `system/core/Output.php` (PHP) -> Cumulative Risk: **537.11**
- **Archetype:** `file_cluster_8` (Distance: 14.281 IQR)
- **Magnitude:** 455.26 | **LOC:** 845 | **CtrlFlow:** 57.4% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Tech Debt (97.2034%), Safety Score (95.1552%)
- **Heaviest Functions:** `set_header` (Impact: 102.0), `_display` (Impact: 54.6), `_display_cache` (Impact: 26.9)

### 2. `system/database/DB_cache.php` (PHP) -> Cumulative Risk: **519.77**
- **Archetype:** `file_cluster_8` (Distance: 14.069 IQR)
- **Magnitude:** 125.78 | **LOC:** 223 | **CtrlFlow:** 57.1% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (98.8593%), Safety Score (98.2279%), State Flux (85.0%)
- **Heaviest Functions:** `write` (Impact: 13.1), `check_path` (Impact: 12.6), `delete` (Impact: 11.1)

### 3. `system/database/drivers/mssql/mssql_driver.php` (PHP) -> Cumulative Risk: **515.45**
- **Archetype:** `file_cluster_8` (Distance: 13.761 IQR)
- **Magnitude:** 248.3 | **LOC:** 508 | **CtrlFlow:** 40.7% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (99.2867%), Safety Score (92.4448%), State Flux (85.0%)
- **Heaviest Functions:** `_limit` (Impact: 22.8), `db_connect` (Impact: 19.5), `field_data` (Impact: 8.1)

### 4. `system/database/drivers/sqlite3/sqlite3_driver.php` (PHP) -> Cumulative Risk: **513.46**
- **Archetype:** `file_cluster_9` (Distance: 13.741 IQR)
- **Magnitude:** 126.62 | **LOC:** 346 | **CtrlFlow:** 26.3% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Tech Debt (100.0%), Spec Match (100.0%), Safety Score (89.9059%), State Flux (85.0%)
- **Heaviest Functions:** `db_connect` (Impact: 12.1), `field_data` (Impact: 10.0), `_list_tables` (Impact: 7.1)

### 5. `system/core/URI.php` (PHP) -> Cumulative Risk: **511.45**
- **Archetype:** `file_cluster_8` (Distance: 14.305 IQR)
- **Magnitude:** 378.1 | **LOC:** 663 | **CtrlFlow:** 52.5% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (89.9112%), Verification (80.0%)
- **Heaviest Functions:** `__construct` (Impact: 27.6), `_parse_request_uri` (Impact: 24.9), `_uri_to_assoc` (Impact: 24.9)

### 6. `system/database/drivers/oci8/oci8_driver.php` (PHP) -> Cumulative Risk: **511.15**
- **Archetype:** `file_cluster_8` (Distance: 13.679 IQR)
- **Magnitude:** 269.88 | **LOC:** 618 | **CtrlFlow:** 47.5% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (99.947%), Safety Score (91.3866%), State Flux (85.0%)
- **Heaviest Functions:** `field_data` (Impact: 17.9), `error` (Impact: 9.8), `version` (Impact: 9.6)

### 7. `system/database/DB_driver.php` (PHP) -> Cumulative Risk: **509.03**
- **Archetype:** `file_cluster_7` (Distance: 15.183 IQR)
- **Magnitude:** 615.66 | **LOC:** 1941 | **CtrlFlow:** 50.5% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Safety Score (99.152%), State Flux (85.0%), Verification (80.0%)
- **Heaviest Functions:** `initialize` (Impact: 97.8), `compile_binds` (Impact: 66.6), `trans_begin` (Impact: 10.3)

### 8. `system/database/DB_query_builder.php` (PHP) -> Cumulative Risk: **508.56**
- **Archetype:** `file_cluster_8` (Distance: 14.771 IQR)
- **Magnitude:** 1577.2 | **LOC:** 2882 | **CtrlFlow:** 52.5% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (96.035%), Safety Score (95.3528%), State Flux (85.0%)
- **Heaviest Functions:** `_like` (Impact: 53.0), `_wh` (Impact: 41.8), `join` (Impact: 41.7)

### 9. `system/core/Exceptions.php` (PHP) -> Cumulative Risk: **503.73**
- **Archetype:** `file_cluster_13` (Distance: 13.888 IQR)
- **Magnitude:** 180.52 | **LOC:** 288 | **CtrlFlow:** 68.6% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** State Flux (100.0%), Spec Match (100.0%), Safety Score (92.4857%), Verification (80.0%)
- **Heaviest Functions:** `show_error` (Impact: 19.6), `show_exception` (Impact: 14.0), `show_php_error` (Impact: 12.3)

### 10. `system/database/drivers/sqlsrv/sqlsrv_driver.php` (PHP) -> Cumulative Risk: **500.45**
- **Archetype:** `file_cluster_8` (Distance: 14.148 IQR)
- **Magnitude:** 294.96 | **LOC:** 545 | **CtrlFlow:** 46.2% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Tech Debt (95.7114%), Safety Score (90.0692%), State Flux (85.0%)
- **Heaviest Functions:** `db_connect` (Impact: 26.2), `_limit` (Impact: 24.9), `error` (Impact: 11.7)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `system/core/Common.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 16.273 IQR)
- **Top Global Matches:** file_cluster_13: 16.273, file_cluster_8: 16.403, file_cluster_11: 16.476
- **Magnitude:** 1778.2 | **LOC:** 854 | **CtrlFlow:** 50.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (32.8655%), Tech Debt (15.4004%)
**Top Internal Functions/Classes:**
  * `get_config` (Impact: 26.6)
  * `set_status_header` (Impact: 20.2)
  * `is_https` (Impact: 13.0)
  * `_error_handler` (Impact: 10.5)
  * `_stringify_attributes` (Impact: 9.8)
    * *Intent:* /** * Error Handler * * This is the custom error handler that is declared at the (relative) * top of...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 90`, `structural_boundaries: 90`, `args: 39`, `func_start: 18`
* *Risk/State:* `safety_bypasses: 41`, `state_mutation: 1614`, `fragile_debt: 1`, `orphaned_logic: 1`
* *Architecture:* `io: 3`, `import: 11`
* *Defense:* `safety: 20`, `doc: 64`, `test: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` 410	=> 'Gone', d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", 407	=> 'Proxy Authentication Required', 504	=> 'Gateway Timeout', * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, 409	=> 'Conflict', 451	=> 'Unavailable For Legal Reasons', 501	=> 'Not Implemented'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/CodeIgniter.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 16.789 IQR)
- **Top Global Matches:** file_cluster_13: 16.789, file_cluster_11: 17.017, file_cluster_8: 17.058
- **Magnitude:** 1711.94 | **LOC:** 510 | **CtrlFlow:** 64.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (56.318%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `get_instance` (Impact: 1.9)
    * *Intent:* /* * ------------------------------------------------------ * Should we use a Composer autoloader? *...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 48`, `structural_boundaries: 26`, `args: 1`, `func_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 1704`
* *Architecture:* `api: 1`, `import: 12`
* *Defense:* `safety: 5`, `doc: 7`, `test: 3`, `immutability_locks: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", password.php', * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, standard.php', autoload.php')
				: log_message('error', ARISING FROM, '.$RTR->directory.$error_class.'.php', )
 * @copyright	Copyright (c) 2014 - 2019...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/DB_query_builder.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.771 IQR)
- **Top Global Matches:** file_cluster_8: 14.771, file_cluster_7: 14.838, file_cluster_13: 14.998
- **Magnitude:** 1577.2 | **LOC:** 2882 | **CtrlFlow:** 52.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (35.0209%), Tech Debt (96.035%)
**Top Internal Functions/Classes:**
  * `_like` (Impact: 53.0)
  * `_wh` (Impact: 41.8)
    * *Intent:* // -------------------------------------------------------------------- /** * Select Sum * * Generat...
  * `join` (Impact: 41.7)
    * *Intent:* // --------------------------------------------------------------------
  * `delete` (Impact: 34.0)
  * `update_batch` (Impact: 33.9)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 207`, `structural_boundaries: 187`, `args: 68`, `func_start: 68`, `class_start: 1`
* *Risk/State:* `state_mutation: 866`, `planned_debt: 1`, `orphaned_logic: 39`
* *Architecture:* `api: 52`
* *Defense:* `safety: 28`, `doc: 364`, `test: 2`, `immutability_locks: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` regardless of whether
	 * order_by() is called prior to from(), d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", 
	protected function _compile_wh($qb_key)
	
		if (count($this->$qb_key) > 0)
		
			for ($i = 0, 
	protected function _compile_order_by()
	
		if (empty($this->qb_orderby))
		
			return '', * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, d so that aliases are tracked properly, an escape sequence definition for LIKE wildcards
			if ($escape === TRUE && $this->_like_escape_str !== '')
			
				$v .= sprintf($this->_like_escape_str, $c = count($this->qb_groupby...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/drivers/pdo/subdrivers/pdo_mysql_driver.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.24%)
- **Global Archetype:** `file_cluster_13` (Drift: 16.384 IQR)
- **Top Global Matches:** file_cluster_13: 16.384, file_cluster_0: 16.443, file_cluster_17: 16.463
- **Magnitude:** 1004.82 | **LOC:** 381 | **CtrlFlow:** 44.2% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (34.6391%), Tech Debt (73.2145%)
**Top Internal Functions/Classes:**
  * `db_connect` (Impact: 43.8)
    * *Intent:* /** * Compression flag * * @var bool */
  * `__construct` (Impact: 9.5)
    * *Intent:* /**
  * `db_select` (Impact: 7.5)
  * `_list_tables` (Impact: 7.3)
    * *Intent:* // -------------------------------------------------------------------- /**
  * `field_data` (Impact: 6.4)
    * *Intent:* // -------------------------------------------------------------------- /** * Rollback Transaction *...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 34`, `structural_boundaries: 43`, `args: 11`, `func_start: 11`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 23`, `state_mutation: 898`, `orphaned_logic: 9`
* *Architecture:* `io: 15`, `api: 7`, `import: 1`
* *Defense:* `safety: 19`, `doc: 39`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, ARISING FROM, WHETHER IN AN ACTION OF CONTRACT...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `application/config/migration.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.29%)
- **Global Archetype:** `file_cluster_8` (Drift: 17.456 IQR)
- **Top Global Matches:** file_cluster_8: 17.456, file_cluster_0: 17.75, file_cluster_13: 17.752
- **Magnitude:** 798.56 | **LOC:** 85 | **CtrlFlow:** 88.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (43.7827%), Tech Debt (0.0%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 8`, `structural_boundaries: 1`
* *Risk/State:* `high_risk_execution: 3`, `state_mutation: 782`
* *Architecture:* None
* *Defense:* `test: 4`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` '
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/Input.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 15.499 IQR)
- **Top Global Matches:** file_cluster_8: 15.499, file_cluster_13: 15.53, file_cluster_0: 15.539
- **Magnitude:** 770.78 | **LOC:** 705 | **CtrlFlow:** 54.6% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (45.8428%), Tech Debt (55.1568%)
**Top Internal Functions/Classes:**
  * `input_stream` (Impact: 47.3)
  * `ip_address` (Impact: 46.9)
  * `_fetch_from_array` (Impact: 28.6)
    * *Intent:* * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR * IMPLIED, INCLUDING BU...
  * `request_headers` (Impact: 17.3)
    * *Intent:* * Set cookie * * Accepts an arbitrary number of parameters (up to 7) or an associative * array in th...
  * `valid_ip` (Impact: 14.7)
    * *Intent:* // ------------------------------------------------------------------------ /** * Fetch an item from...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 65`, `structural_boundaries: 54`, `args: 18`, `func_start: 17`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 12`, `state_mutation: 550`, `orphaned_logic: 8`
* *Architecture:* `io: 15`, `api: 16`
* *Defense:* `safety: 14`, `doc: 69`, `test: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', ARISING FROM...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/DB_driver.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_7` (Drift: 15.183 IQR)
- **Top Global Matches:** file_cluster_7: 15.183, file_cluster_8: 15.195, file_cluster_13: 15.269
- **Magnitude:** 615.66 | **LOC:** 1941 | **CtrlFlow:** 50.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (45.3188%), Tech Debt (79.35%)
**Top Internal Functions/Classes:**
  * `initialize` (Impact: 97.8)
  * `compile_binds` (Impact: 66.6)
  * `trans_begin` (Impact: 10.3)
  * `trans_complete` (Impact: 8.2)
    * *Intent:* /** * Save queries flag *
  * `trans_commit` (Impact: 5.9)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 50`, `structural_boundaries: 49`, `args: 18`, `func_start: 18`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 338`, `orphaned_logic: 10`
* *Architecture:* `io: 1`, `api: 47`
* *Defense:* `safety: 6`, `doc: 129`, `test: 1`
* *Network Topology:*
  * `Ecosystem Role:` Pure Consumer (Orchestrator) | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 1):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", m.member_name FROM members AS m
	 *
	 * Since the column name can include up to four segments (host, * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, DB_cache.php', ARISING FROM, )
 * @copyright	Copyright (c) 2014 - 2019, $protect_identifiers = NULL, )
 * @copyright	Copyright (c) 2019 - 2022...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/Loader.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_13` (Drift: 13.666 IQR)
- **Top Global Matches:** file_cluster_13: 13.666, file_cluster_8: 13.834, file_cluster_7: 14.008
- **Magnitude:** 567.66 | **LOC:** 1435 | **CtrlFlow:** 51.6% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (45.2086%), Tech Debt (20.7476%)
**Top Internal Functions/Classes:**
  * `driver` (Impact: 146.4)
  * `helper` (Impact: 39.0)
  * `_ci_init_library` (Impact: 35.3)
  * `_ci_load_stock_library` (Impact: 32.5)
  * `_ci_autoloader` (Impact: 31.2)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 82`, `structural_boundaries: 77`, `args: 15`, `func_start: 15`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 5`, `state_mutation: 214`, `orphaned_logic: 4`
* *Architecture:* `api: 9`, `import: 13`
* *Defense:* `safety: 21`, `doc: 57`, `test: 1`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):`  but we don't want a leading slash
		$class = str_replace('.php', autoload.php', d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", Driver.php', the global cached vars into the current _ci_vars if needed
		empty($this->_ci_cached_vars) OR $_ci_vars = array_merge($this->_ci_cached_vars, 
		if (ob_get_level() > $this->_ci_ob_level + 1)
		
			ob_end_flush(, autoload.php', ''...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/helpers/text_helper.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.695 IQR)
- **Top Global Matches:** file_cluster_8: 14.695, file_cluster_13: 14.723, file_cluster_0: 14.829
- **Magnitude:** 540.34 | **LOC:** 569 | **CtrlFlow:** 67.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (37.2559%), Tech Debt (12.2595%)
**Top Internal Functions/Classes:**
  * `word_wrap` (Impact: 24.4)
  * `ascii_to_entities` (Impact: 21.6)
  * `highlight_code` (Impact: 21.1)
  * `entities_to_ascii` (Impact: 14.1)
  * `character_limiter` (Impact: 13.3)
    * *Intent:* * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR * IMPLIED, INCLUDING BU...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 61`, `structural_boundaries: 30`, `args: 16`, `func_start: 8`
* *Risk/State:* `safety_bypasses: 10`, `state_mutation: 412`, `dead_code: 1`, `orphaned_logic: 1`
* *Architecture:* `import: 2`
* *Defense:* `safety: 1`, `doc: 36`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, ARISING FROM, )
 * @copyright	Copyright (c) 2014 - 2019, which we will remove later
		$str = highlight_string('<?php '.$str.' ?>', )
 * @copyright	Copyright (c) 2019 - 2022, foreign_chars.php', DAMAGES OR OTHER
 * LIABILITY...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/Output.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.281 IQR)
- **Top Global Matches:** file_cluster_8: 14.281, file_cluster_0: 14.282, file_cluster_13: 14.29
- **Magnitude:** 455.26 | **LOC:** 845 | **CtrlFlow:** 57.4% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (45.6069%), Tech Debt (97.2034%)
**Top Internal Functions/Classes:**
  * `set_header` (Impact: 102.0)
  * `_display` (Impact: 54.6)
  * `_display_cache` (Impact: 26.9)
    * *Intent:* // -------------------------------------------------------------------- /** * Set HTTP Status Header...
  * `set_content_type` (Impact: 11.9)
    * *Intent:* /**
  * `__construct` (Impact: 9.5)
    * *Intent:* /**
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 54`, `structural_boundaries: 40`, `args: 15`, `func_start: 14`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 8`, `state_mutation: 189`, `planned_debt: 1`, `orphaned_logic: 9`
* *Architecture:* `io: 17`, `api: 20`
* *Defense:* `safety: 11`, `doc: 65`, `sync_locks: 5`, `cleanup: 4`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', ARISING FROM...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/Security.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.39%)
- **Global Archetype:** `file_cluster_9` (Drift: 13.962 IQR)
- **Top Global Matches:** file_cluster_9: 13.962, file_cluster_0: 14.034, file_cluster_13: 14.128
- **Magnitude:** 402.58 | **LOC:** 1089 | **CtrlFlow:** 72.6% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (38.1023%), Tech Debt (18.6122%)
**Top Internal Functions/Classes:**
  * `csrf_verify` (Impact: 104.4)
    * *Intent:* /** * CSRF Expire time * * Expiration time for Cross Site Request Forgery protection cookie. * Defau...
  * `xss_clean` (Impact: 73.6)
  * `get_random_bytes` (Impact: 25.3)
  * `__construct` (Impact: 11.8)
  * `_filter_attributes` (Impact: 9.3)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 69`, `structural_boundaries: 26`, `args: 10`, `func_start: 9`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 5`, `high_risk_execution: 8`, `state_mutation: 148`, `dead_code: 2`, `orphaned_logic: 2`
* *Architecture:* `io: 5`, `api: 7`
* *Defense:* `safety: 4`, `doc: 43`, `cleanup: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', ARISING FROM...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/URI.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.305 IQR)
- **Top Global Matches:** file_cluster_8: 14.305, file_cluster_7: 14.373, file_cluster_13: 14.442
- **Magnitude:** 378.1 | **LOC:** 663 | **CtrlFlow:** 52.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (45.4003%), Tech Debt (77.73%)
**Top Internal Functions/Classes:**
  * `__construct` (Impact: 27.6)
    * *Intent:* * * Permission is hereby granted, free of charge, to any person obtaining a copy * of this software ...
  * `_parse_request_uri` (Impact: 24.9)
  * `_uri_to_assoc` (Impact: 24.9)
    * *Intent:* // -------------------------------------------------------------------- /**
  * `_set_uri_string` (Impact: 20.2)
  * `_parse_query_string` (Impact: 11.3)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 62`, `structural_boundaries: 56`, `args: 22`, `func_start: 22`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 3`, `state_mutation: 187`, `orphaned_logic: 10`
* *Architecture:* `io: 2`, `api: 19`
* *Defense:* `safety: 16`, `doc: 79`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, $query, ARISING FROM, 1) === 0)
		
			$query = explode('?', )
 * @copyright	Copyright (c) 2014 - 2019, )
 * @copyright	Copyright (c) 2019 - 2022, DAMAGES OR OTHER
 * LIABILITY...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/helpers/url_helper.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.311 IQR)
- **Top Global Matches:** file_cluster_8: 14.311, file_cluster_13: 14.356, file_cluster_9: 14.399
- **Magnitude:** 345.66 | **LOC:** 560 | **CtrlFlow:** 62.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (38.1567%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `safe_mailto` (Impact: 35.9)
  * `anchor_popup` (Impact: 22.2)
  * `anchor` (Impact: 13.0)
  * `url_title` (Impact: 11.2)
  * `redirect` (Impact: 8.2)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 66`, `structural_boundaries: 39`, `args: 26`, `func_start: 13`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 228`, `dead_code: 2`
* *Architecture:* `import: 1`
* *Defense:* `safety: 4`, `doc: 54`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', 
	function prep_url($str = '')
	
		if ($str === '')
		
			return ''...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `application/config/routes.php` (PHP | Tier 2 | 🚨 AI THREAT: 98.85%)
- **Global Archetype:** `file_cluster_8` (Drift: 16.118 IQR)
- **Top Global Matches:** file_cluster_8: 16.118, file_cluster_13: 16.256, file_cluster_17: 16.493
- **Magnitude:** 324.06 | **LOC:** 55 | **CtrlFlow:** 33.3% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (42.7918%), Tech Debt (0.0%)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 4`, `structural_boundaries: 8`
* *Risk/State:* `state_mutation: 308`
* *Architecture:* `import: 1`
* *Defense:* `test: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` 
$route['default_controller'] = 'welcome', s translation.
| When you set this option to TRUE
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/helpers/html_helper.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.35%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.355 IQR)
- **Top Global Matches:** file_cluster_8: 14.355, file_cluster_13: 14.432, file_cluster_7: 14.55
- **Magnitude:** 321.7 | **LOC:** 392 | **CtrlFlow:** 69.2% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (39.5844%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `link_tag` (Impact: 45.1)
  * `meta` (Impact: 28.9)
    * *Intent:* /** * Doctype * * Generates a page document type declaration * * Examples of valid options: html5, x...
  * `img` (Impact: 23.8)
  * `doctype` (Impact: 14.8)
    * *Intent:* // Set the indentation based on the depth
  * `_list` (Impact: 13.1)
    * *Intent:* /** * CodeIgniter HTML Helpers * * @package CodeIgniter
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 54`, `structural_boundaries: 24`, `args: 16`, `func_start: 8`
* *Risk/State:* `state_mutation: 186`
* *Architecture:* `import: 2`
* *Defense:* `safety: 9`, `doc: 43`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', doctypes.php'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/helpers/date_helper.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.148 IQR)
- **Top Global Matches:** file_cluster_8: 13.148, file_cluster_7: 13.332, file_cluster_13: 13.478
- **Magnitude:** 311.3 | **LOC:** 638 | **CtrlFlow:** 65.6% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (38.3384%), Tech Debt (34.0006%)
**Top Internal Functions/Classes:**
  * `timespan` (Impact: 56.4)
    * *Intent:* * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, * FITNESS FOR A PARTICULA...
  * `date_range` (Impact: 31.6)
  * `days_in_month` (Impact: 15.5)
    * *Intent:* /** * Timespan
  * `mysql_to_unix` (Impact: 9.5)
  * `now` (Impact: 7.6)
    * *Intent:* /** * CodeIgniter * * An open source application development framework for PHP * * This content is r...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 59`, `structural_boundaries: 31`, `args: 14`, `func_start: 7`
* *Risk/State:* `safety_bypasses: 7`, `state_mutation: 174`, `fragile_debt: 1`, `orphaned_logic: 1`
* *Architecture:* None
* *Defense:* `safety: 2`, `doc: 32`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', ARISING FROM...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/DB_utility.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.633 IQR)
- **Top Global Matches:** file_cluster_8: 13.633, file_cluster_7: 13.782, file_cluster_13: 13.87
- **Magnitude:** 309.74 | **LOC:** 416 | **CtrlFlow:** 51.8% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (34.4232%), Tech Debt (77.6345%)
**Top Internal Functions/Classes:**
  * `backup` (Impact: 34.3)
  * `xml_from_result` (Impact: 13.7)
  * `list_databases` (Impact: 11.7)
    * *Intent:* * * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR * IMPLIED, INCLUDING ...
  * `optimize_database` (Impact: 10.1)
  * `csv_from_result` (Impact: 10.1)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 43`, `structural_boundaries: 40`, `args: 9`, `func_start: 9`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 11`, `state_mutation: 197`, `orphaned_logic: 8`
* *Architecture:* `api: 9`
* *Defense:* `safety: 3`, `doc: 39`, `test: 1`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d the .zip file extension we'll remove it
				if (preg_match('|.+?\.zip$|', d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/helpers/file_helper.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.48%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.397 IQR)
- **Top Global Matches:** file_cluster_8: 13.397, file_cluster_7: 13.574, file_cluster_13: 13.753
- **Magnitude:** 305.68 | **LOC:** 436 | **CtrlFlow:** 79.8% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (43.0319%), Tech Debt (14.1965%)
**Top Internal Functions/Classes:**
  * `symbolic_permissions` (Impact: 44.2)
  * `get_file_info` (Impact: 38.6)
  * `delete_files` (Impact: 26.2)
  * `get_dir_file_info` (Impact: 17.8)
  * `get_filenames` (Impact: 17.6)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 79`, `structural_boundaries: 20`, `args: 14`, `func_start: 7`
* *Risk/State:* `safety_bypasses: 7`, `state_mutation: 144`, `orphaned_logic: 1`
* *Architecture:* `io: 2`
* *Defense:* `doc: 33`, `sync_locks: 2`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, ARISING FROM, _path === TRUE) ? $source_dir.$file : $file, )
 * @copyright	Copyright (c) 2014 - 2019, the path, )
 * @copyright	Copyright (c) 2019 - 2022, DAMAGES OR OTHER
 * LIABILITY...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/drivers/sqlsrv/sqlsrv_driver.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.24%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.148 IQR)
- **Top Global Matches:** file_cluster_8: 14.148, file_cluster_7: 14.259, file_cluster_13: 14.34
- **Magnitude:** 294.96 | **LOC:** 545 | **CtrlFlow:** 46.2% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (34.5754%), Tech Debt (95.7114%)
**Top Internal Functions/Classes:**
  * `db_connect` (Impact: 26.2)
  * `_limit` (Impact: 24.9)
    * *Intent:* // -------------------------------------------------------------------- /**
  * `error` (Impact: 11.7)
    * *Intent:* // --------------------------------------------------------------------
  * `field_data` (Impact: 8.1)
  * `db_select` (Impact: 7.5)
    * *Intent:* // -------------------------------------------------------------------- /**
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 43`, `structural_boundaries: 50`, `args: 20`, `func_start: 20`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 2`, `state_mutation: 151`, `orphaned_logic: 12`
* *Architecture:* `api: 10`
* *Defense:* `safety: 12`, `doc: 65`, `cleanup: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, d for ROW_NUMBER() to work
		if ($this->qb_offset && ! empty($this->qb_orderby))
		
			$orderby = $this->_compile_order_by(, 
defined('BASEPATH') OR exit('No direct script access allowed'...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/DB_forge.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 14.306 IQR)
- **Top Global Matches:** file_cluster_8: 14.306, file_cluster_7: 14.388, file_cluster_13: 14.486
- **Magnitude:** 271.06 | **LOC:** 1039 | **CtrlFlow:** 60.3% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (35.6132%), Tech Debt (76.7559%)
**Top Internal Functions/Classes:**
  * `_create_table` (Impact: 18.1)
  * `_process_indexes` (Impact: 15.5)
  * `drop_table` (Impact: 13.4)
    * *Intent:* // -------------------------------------------------------------------- /**
  * `drop_database` (Impact: 13.2)
    * *Intent:* // -------------------------------------------------------------------- /** * CREATE DATABASE statem...
  * `create_database` (Impact: 11.3)
    * *Intent:* /** * Keys data *
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 44`, `structural_boundaries: 29`, `args: 12`, `func_start: 12`, `class_start: 1`
* *Risk/State:* `state_mutation: 150`, `orphaned_logic: 7`
* *Architecture:* `api: 9`
* *Defense:* `safety: 9`, `doc: 77`, `cleanup: 5`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, ARISING FROM, )
 * @copyright	Copyright (c) 2014 - 2019,  It's not the same for regular indexes.
		if ($primary === TRUE && is_array($key))
		
			foreach ($key, )
 * @copyright	Copyright (c) 2019 - 2022, $primary, DAMAGES OR OTHER
 * LIABILITY...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/drivers/oci8/oci8_driver.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.679 IQR)
- **Top Global Matches:** file_cluster_8: 13.679, file_cluster_9: 13.772, file_cluster_7: 13.804
- **Magnitude:** 269.88 | **LOC:** 618 | **CtrlFlow:** 47.5% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (34.7127%), Tech Debt (99.947%)
**Top Internal Functions/Classes:**
  * `field_data` (Impact: 17.9)
  * `error` (Impact: 9.8)
  * `version` (Impact: 9.6)
    * *Intent:* /** * Limit used flag * * If we use LIMIT, we'll add a field that will * throw off num_fields later....
  * `_limit` (Impact: 7.6)
    * *Intent:* // -------------------------------------------------------------------- /**
  * `_list_columns` (Impact: 7.5)
    * *Intent:* /* If the hostname field isn't empty, doesn't contain * ':' and/or '/' and if port and/or database a...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 47`, `structural_boundaries: 52`, `args: 18`, `func_start: 18`, `class_start: 1`
* *Risk/State:* `state_mutation: 158`, `dead_code: 1`, `fragile_debt: 1`, `orphaned_logic: 14`
* *Architecture:* `api: 8`
* *Defense:* `safety: 6`, `doc: 55`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', ARISING FROM...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/database/drivers/mssql/mssql_driver.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.24%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.761 IQR)
- **Top Global Matches:** file_cluster_8: 13.761, file_cluster_7: 13.853, file_cluster_13: 13.996
- **Magnitude:** 248.3 | **LOC:** 508 | **CtrlFlow:** 40.7% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (44.3472%), Tech Debt (99.2867%)
**Top Internal Functions/Classes:**
  * `_limit` (Impact: 22.8)
  * `db_connect` (Impact: 19.5)
    * *Intent:* * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR * IMPLIED, INCLUDING BU...
  * `field_data` (Impact: 8.1)
  * `db_select` (Impact: 7.6)
  * `_list_tables` (Impact: 7.4)
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 33`, `structural_boundaries: 48`, `args: 20`, `func_start: 20`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 4`, `state_mutation: 127`, `orphaned_logic: 14`
* *Architecture:* `api: 8`
* *Defense:* `safety: 4`, `doc: 63`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 *
 * @package	CodeIgniter
 * @author	EllisLab Dev Team
 * @copyright	Copyright (c) 2008 - 2014, '9', ARISING FROM, )
 * @copyright	Copyright (c) 2014 - 2019,  contains reserved characters.
		if (mssql_select_db('['.$database.']', )
 * @copyright	Copyright (c) 2019 - 2022, DAMAGES OR OTHER
 * LIABILITY...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `tests/mocks/ci_testcase.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.09%)
- **Global Archetype:** `file_cluster_8` (Drift: 12.747 IQR)
- **Top Global Matches:** file_cluster_8: 12.747, file_cluster_13: 12.945, file_cluster_7: 12.966
- **Magnitude:** 235.42 | **LOC:** 401 | **CtrlFlow:** 49.2% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (16.6553%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `ci_vfs_create` (Impact: 32.4)
  * `ci_core_class` (Impact: 10.0)
    * *Intent:* // -------------------------------------------------------------------- /**
  * `ci_set_config` (Impact: 9.8)
    * *Intent:* // --------------------------------------------------------------------
  * `ci_vfs_clone` (Impact: 9.8)
    * *Intent:* // No - put subdirectory back and quit
  * `ci_instance` (Impact: 4.9)
    * *Intent:* // --------------------------------------------------------------------
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 31`, `structural_boundaries: 32`, `args: 13`, `func_start: 13`, `class_start: 1`
* *Risk/State:* `safety_bypasses: 1`, `state_mutation: 122`, `orphaned_logic: 8`
* *Architecture:* `io: 1`, `api: 17`, `import: 1`
* *Defense:* `safety: 5`, `doc: 14`, `test: 2`, `immutability_locks: 1`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` '.$class_name.'.php', '.$name.'_helper.php', '.$name.'_lang.php'
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/core/Config.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.863 IQR)
- **Top Global Matches:** file_cluster_8: 13.863, file_cluster_13: 13.916, file_cluster_7: 13.992
- **Magnitude:** 230.12 | **LOC:** 367 | **CtrlFlow:** 62.1% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (25.6272%), Tech Debt (38.8596%)
**Top Internal Functions/Classes:**
  * `load` (Impact: 31.1)
    * *Intent:* /**
  * `site_url` (Impact: 26.7)
  * `__construct` (Impact: 13.7)
    * *Intent:* * * This content is released under the MIT License (MIT) * * Copyright (c) 2019 - 2022, CodeIgniter ...
  * `base_url` (Impact: 7.9)
    * *Intent:* // --------------------------------------------------------------------
  * `_uri_string` (Impact: 7.6)
    * *Intent:* // -------------------------------------------------------------------- /** * Fetch a config file it...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 41`, `structural_boundaries: 25`, `args: 7`, `func_start: 7`, `class_start: 1`
* *Risk/State:* `state_mutation: 123`, `orphaned_logic: 3`
* *Architecture:* `api: 9`, `import: 1`
* *Defense:* `safety: 9`, `doc: 34`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', $file_path...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `system/helpers/form_helper.php` (PHP | Tier 2 | 🚨 AI THREAT: 99.31%)
- **Global Archetype:** `file_cluster_8` (Drift: 13.616 IQR)
- **Top Global Matches:** file_cluster_8: 13.616, file_cluster_7: 13.81, file_cluster_13: 13.933
- **Magnitude:** 224.3 | **LOC:** 1037 | **CtrlFlow:** 64.9% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (37.2322%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `form_open` (Impact: 31.7)
    * *Intent:* /** * CodeIgniter * * An open source application development framework for PHP * * This content is r...
  * `form_hidden` (Impact: 17.7)
  * `form_textarea` (Impact: 15.8)
  * `form_open_multipart` (Impact: 6.7)
  * `form_input` (Impact: 4.5)
    * *Intent:* /** * Form Declaration - Multipart type * * Creates the opening portion of the form, but with "multi...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `branch: 37`, `structural_boundaries: 20`, `args: 14`, `func_start: 7`
* *Risk/State:* `state_mutation: 140`
* *Architecture:* None
* *Defense:* `safety: 3`, `doc: 36`, `cleanup: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 4.222
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` d in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", DAMAGES OR OTHER
 * LIABILITY, * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, EllisLab, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, )
 * @copyright	Copyright (c) 2019 - 2022, 
defined('BASEPATH') OR exit('No direct script access allowed', ARISING FROM...
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

### Mixed-Responsibility Refactoring Targets for: file_cluster_0
- `user_guide_src/source/_themes/sphinx_rtd_theme/breadcrumbs.html` (HTML) | Magnitude: 17.44 | Delta: **0.1 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: ssr_boundaries: 23, indent_spaces: 20, io: 12, structural_boundaries: 7
- `user_guide_src/source/_themes/sphinx_rtd_theme/searchbox.html` (HTML) | Magnitude: 19.68 | Delta: **0.131 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: args: 10, api: 5, indent_spaces: 5, decorators: 3

### Mixed-Responsibility Refactoring Targets for: file_cluster_13
- `user_guide_src/source/_themes/sphinx_rtd_theme/__init__.py` (PYTHON) | Magnitude: 3.14 | Delta: **0.008 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: doc: 4, encapsulation: 4, structural_boundaries: 3, io: 3
- `user_guide_src/cilexer/cilexer/cilexer.py` (PYTHON) | Magnitude: 4.18 | Delta: **0.042 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: structural_boundaries: 8, indent_spaces: 8, import: 4, encapsulation: 3
- `system/database/drivers/pdo/subdrivers/pdo_mysql_driver.php` (PHP) | Magnitude: 1004.82 | Delta: **0.059 IQR** | Secondary Pull: `file_cluster_0`
  * Top Architectural Signatures: state_mutation: 898, indent_tabs: 185, structural_boundaries: 43, doc: 39
- `tests/mocks/database/db.php` (PHP) | Magnitude: 96.52 | Delta: **0.062 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 83, state_mutation: 49, doc: 19, branch: 15
- `system/core/Exceptions.php` (PHP) | Magnitude: 180.52 | Delta: **0.094 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 142, state_mutation: 109, doc: 30, branch: 24

### Mixed-Responsibility Refactoring Targets for: file_cluster_7
- `system/database/DB_driver.php` (PHP) | Magnitude: 615.66 | Delta: **0.012 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: state_mutation: 338, indent_tabs: 255, doc: 129, branch: 50

### Mixed-Responsibility Refactoring Targets for: file_cluster_8
- `system/core/Output.php` (PHP) | Magnitude: 455.26 | Delta: **0.001 IQR** | Secondary Pull: `file_cluster_0`
  * Top Architectural Signatures: indent_tabs: 241, state_mutation: 189, doc: 65, branch: 54
- `system/core/compat/standard.php` (PHP) | Magnitude: 93.58 | Delta: **0.011 IQR** | Secondary Pull: `file_cluster_17`
  * Top Architectural Signatures: indent_tabs: 61, state_mutation: 51, branch: 21, doc: 7
- `system/core/Log.php` (PHP) | Magnitude: 164.66 | Delta: **0.011 IQR** | Secondary Pull: `file_cluster_9`
  * Top Architectural Signatures: indent_tabs: 114, state_mutation: 94, doc: 39, branch: 30
- `system/helpers/path_helper.php` (PHP) | Magnitude: 19.62 | Delta: **0.013 IQR** | Secondary Pull: `file_cluster_9`
  * Top Architectural Signatures: indent_tabs: 16, branch: 8, state_mutation: 6, doc: 6
- `system/database/DB_cache.php` (PHP) | Magnitude: 125.78 | Delta: **0.016 IQR** | Secondary Pull: `file_cluster_9`
  * Top Architectural Signatures: indent_tabs: 75, state_mutation: 66, doc: 25, branch: 20

### Mixed-Responsibility Refactoring Targets for: file_cluster_9
- `system/database/drivers/mssql/mssql_forge.php` (PHP) | Magnitude: 57.22 | Delta: **0.003 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 47, state_mutation: 29, doc: 20, branch: 12
- `system/database/drivers/pdo/subdrivers/pdo_dblib_forge.php` (PHP) | Magnitude: 57.22 | Delta: **0.003 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 47, state_mutation: 29, doc: 20, branch: 12
- `system/database/drivers/pdo/subdrivers/pdo_sqlsrv_forge.php` (PHP) | Magnitude: 57.22 | Delta: **0.003 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 47, state_mutation: 29, doc: 20, branch: 12
- `system/database/drivers/sqlsrv/sqlsrv_forge.php` (PHP) | Magnitude: 57.22 | Delta: **0.003 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 47, state_mutation: 29, doc: 20, branch: 12
- `system/helpers/download_helper.php` (PHP) | Magnitude: 123.24 | Delta: **0.005 IQR** | Secondary Pull: `file_cluster_8`
  * Top Architectural Signatures: indent_tabs: 82, state_mutation: 72, branch: 23, structural_boundaries: 7

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### 🃏 House of Cards (Closeness * Error Risk)
These files are deeply embedded (1 or 2 hops from the entire codebase) but possess high error exposure. A runtime exception here will cascade instantly across the application.

- `system/database/DB.php` -> **Severity: 0.293** (Embedded: 0.0043 * Error Risk: 68.9546%)

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `application/controllers/Welcome.php` -> **Severity: 271.922** (Blast Radius: 4.222 * Doc Risk: 64.4059%)
- `application/views/errors/cli/error_exception.php` -> **Severity: 123.003** (Blast Radius: 4.222 * Doc Risk: 29.1339%)
- `application/views/errors/cli/error_php.php` -> **Severity: 123.003** (Blast Radius: 4.222 * Doc Risk: 29.1339%)
- `application/views/errors/html/error_exception.php` -> **Severity: 109.638** (Blast Radius: 4.222 * Doc Risk: 25.9683%)
- `application/views/errors/html/error_php.php` -> **Severity: 109.638** (Blast Radius: 4.222 * Doc Risk: 25.9683%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
